--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,53 @@
 <footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
-
+	<div class="wrapper">
+		<div class="content-block">
+			<ul class="social-media-list">
+				{% if site.github_username %}
+				<li>
+					<a class="link icon-only external" target="_blank" href="https://github.com/{{ site.github_username }}">
+						<i class="icon icon-github"></i>
+					</a>
+				</li>
+				{% endif %} {% if site.twitter_username %}
+				<li>
+					<a class="link icon-only external" target="_blank" href="https://twitter.com/{{ site.twitter_username }}">
+						<i class="icon icon-twitter"></i>
+					</a>
+				</li>
+				{% endif %} {% if site.facebook_username %}
+				<li>
+					<a class="link icon-only external" target="_blank" href="https://facebook.com/{{ site.facebook_username }}">
+						<i class="icon icon-facebook"></i>
+					</a>
+				</li>
+				{% endif %} {% if site.zhihu_username %}
+				<li>
+					<a class="link icon-only external" target="_blank" href="https://zhihu.com/people/{{ site.zhihu_username }}">
+						<i class="icon icon-zhihu"></i>
+					</a>
+				</li>
+				{% endif %} {% if site.sina_username %}
+				<li>
+					<a class="link icon-only external" target="_blank" href="https://weibo.com/{{ site.sina_username }}">
+						<i class="icon icon-sina"></i>
+					</a>
+				</li>
+				{% endif %} {% if site.segmentfault_username %}
+				<li>
+					<a class="link icon-only external" target="_blank" href="https://segmentfault.com/u/{{ site.segmentfault_username }}">
+						<i class="icon icon-segmentfault"></i>
+					</a>
+				</li>
+				{% endif %}
+			</ul>
+		</div>
+		<div class="content-block">
+			<p class="copyright">
+				Copyright &copy; 2016 Bglky
+				<br> Theme by <a class="external" target="_blank" href="http://bglky.me">Bglky</a> |
+				<iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="91px" height="20px" src="https://ghbtns.com/github-btn.html?user=bglky&repo=bglky.github.io&type=star&count=true">
+				</iframe>
+			</p>
+		</div>
+	</div>
 </footer>
