--- a/css/main.scss
+++ b/css/main.scss
@@ -47,5 +47,5 @@ $on-PC: 992px;//992px
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "_syntax-highlighting"
 ;
